--- a/Cupcake/src/main/resources/static/css/style.css
+++ b/Cupcake/src/main/resources/static/css/style.css
@@ -1222,7 +1222,9 @@ body::-webkit-scrollbar { /* All other browsers */
 
 /* ___________________________________________ */
 
-#ordersContainer{
+#ordersContainer,
+#activeReturnsContainer,
+#pastReturnsContainer{
     display: none;
     overflow-y: auto;
 }
@@ -1232,7 +1234,9 @@ body::-webkit-scrollbar { /* All other browsers */
 }
 
 #ordersContainer .order-card,
-#orderResult .order-card {
+#orderResult .order-card,
+#activeReturnsContainer .order-card,
+#pastReturnsContainer .order-card {
     border: 0.0625rem solid var(--profile-sidemenu-border);
     border-radius: 0.5rem;
     padding: 1rem;
@@ -1243,6 +1247,8 @@ body::-webkit-scrollbar { /* All other browsers */
     flex-direction: column;
     justify-content: space-between;
 }
+
+
 
 #ordersContainer::-webkit-scrollbar,
 #orderResult::-webkit-scrollbar{
@@ -2527,5 +2533,4 @@ button.minus:active {
     0%, 80% { opacity: 1; }
     100% { opacity: 0; pointer-events: none; }
 }
-
 
