--- a/Cupcake/src/main/resources/templates/contact.html
+++ b/Cupcake/src/main/resources/templates/contact.html
@@ -26,6 +26,7 @@
 
     <!-- Script Load -->
     <script src="/js/button-to-top.js"></script>
+    <script src="/js/notification.js"></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
@@ -136,6 +137,10 @@
     <!-- Footer Nav -->
     <div id="footer-nav-component"></div>
     <!-- Footer Nav -->
+
+    <!-- Notification -->
+    <div id="guac-notification-container"></div>
+    <!-- Notification -->
 
 </body>
 </html>
