--- a/Cupcake/src/main/resources/templates/passwordhash.html
+++ b/Cupcake/src/main/resources/templates/passwordhash.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes - Login</title>
+    <title>Olsker Cupcakes - Password Reset</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -30,42 +30,36 @@
     <!-- Script Load -->
     <script src="/js/bubble-spawn.js" defer></script>
     <script src="/js/notification.js" defer></script>
+    <script src="/js/forgot.js" defer></script>
 
 
 </head>
-<body> 
+<body>
 
-    <a href="/" class="exit-btn" title="Tilbage til forsiden">&#10006;</a>
+<a href="/login" class="exit-btn" title="Tilbage til login">&#10006;</a>
 
-    <section class="login-section-1">
-        <div class="login-container">
-            <h2>Log Ind</h2>
+<section class="login-section-1">
+    <div class="login-container">
+        <h2>Nulstil Adgangskode</h2>
 
-            <form method="post" action="/login">
-                <input type="text" name="username" placeholder="Brugernavn" required>
-                <input type="password" name="password" placeholder="Adgangskode" required>
+        <form method="post" action="/forgot/resetPassword">
 
-                <div class="login-btn-group">
-                    <button type="submit" class="guac-btn guac-btn-form">
-                        Log Ind
-                    </button>
-                    <button type="button" class="guac-btn guac-btn-form" onclick="window.location.href='/register'">
-                        Opret Bruger
-                    </button>
-                </div>
+            <input type="text" id="token" name="token" placeholder="Indtast kode fra mailen" required>
+            <input type="password" id="newPassword" name="newPassword" placeholder="Ny adgangskode" required>
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Bekræft adgangskode" required>
 
-                <div class="forgot-btn-group guac-mt-4">
-                    <a href="/forgot" class="forgot-link">Forgot something?</a>
-                </div>
+            <div class="login-btn-group guac-mt-4">
+                <button type="submit" class="guac-btn guac-btn-form">Nulstil</button>
+            </div>
 
-                <p th:if="${error}" th:text="${error}" style="color: red;"></p>
-            </form>
-        </div>
-    </section>
+        </form>
 
-    <!-- Notification -->
-    <div id="guac-notification-container"></div>
-    <!-- Notification -->
+    </div>
+</section>
+
+<!-- Notification -->
+<div id="guac-notification-container"></div>
+<!-- Notification -->
 
 </body>
 </html>
