i think - stadig hardcoded men med id sendt med

--- a/Cupcake/src/main/resources/templates/custom.html
+++ b/Cupcake/src/main/resources/templates/custom.html
@@ -79,16 +79,16 @@
                             <label for="top">Vælg top</label>
                             <select id="top" name="top">
                                 <option value="">Topping</option>
-                                <option value="Jordbær">Jordbær</option>
-                                <option value="Hindbær">Hindbær</option>
-                                <option value="Chokolade">Chokolade</option>
-                                <option value="Flødeskum">Flødeskum</option>
-                                <option value="Marshmallow Sprinkle">Marshmallow Sprinkle</option>
-                                <option value="Skum">Skum</option>
-                                <option value="Marengs">Marengs</option>
-                                <option value="Vaniljeskum">Vaniljeskum</option>
-                                <option value="Is">Is</option>
-                                <option value="Marshmallow Fluff">Marshmallow Fluff</option>
+                                <option value="1">Jordbær</option>
+                                <option value="2">Chokolade</option>
+                                <option value="3">Hindbær</option>
+                                <option value="4">Flødeskum</option>
+                                <option value="5">Marshmallow Sprinkle</option>
+                                <option value="6">Skum</option>
+                                <option value="7">Marshmallow Fluff</option>
+                                <option value="8">Is</option>
+                                <option value="9">Vaniljeskum</option>
+                                <option value="10">Marengs</option>
                             </select>
                         </div>
 
@@ -96,10 +96,10 @@
                             <label for="bund">Vælg bund</label>
                             <select id="bund" name="bund">
                                 <option value="">Bund</option>
-                                <option value="Chokolade">Chokolade</option>
-                                <option value="Vanilje">Vanilje</option>
-                                <option value="Red Velvet">Red Velvet</option>
-                                <option value="Sandkage">Sandkage</option>>
+                                <option value="1">Chokolade</option>
+                                <option value="2">Vanilje</option>
+                                <option value="3">Red Velvet</option>
+                                <option value="4">Sandkage</option>
                             </select>
                         </div>
 
