Setup af metoder der skal laves

--- a/Cupcake/src/main/resources/templates/profile.html
+++ b/Cupcake/src/main/resources/templates/profile.html
@@ -52,7 +52,11 @@
             </div>
 
             <!-- Exit Button Start -->
-            <a href="/" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
+                <a href="/" class="exit-btn-profile" title="Tilbage til forsiden">&#10006;</a>
+
+                <!-- BACKEND ER LAVET, KNAPPEN SKAL BARE LAVES!-->
+                <!--<a th:href="'/user/logout'" class="exit-btn-profile" title="Log out">Log out</a> -->
+
             <!-- Exit Button End -->
 
         </div>
