PR Approved + Changes

--- a/Cupcake/src/main/resources/templates/custom.html
+++ b/Cupcake/src/main/resources/templates/custom.html
@@ -31,6 +31,7 @@
     <script src="/js/custom.js" defer></script>
     <script src="js/cart.js" defer></script>
     <script src="js/order.js" defer></script>
+    <script src="js/notification.js" defer></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
@@ -73,7 +74,7 @@
 
                 <!-- Input Form -->
                 <div class="cupcake-form-box">
-                    <form class="cupcake-form">
+                    <form class="cupcake-form" method="post">
 
                         <div class="cupcake-field">
                             <label for="top">Vælg top</label>
@@ -119,6 +120,7 @@
                         <img src="/images/products/cupcake-2.png" alt="Cupcake preview">
                     </div>
                 </div>
+                <!-- Preview Box -->
 
             </div>
         </div>
@@ -126,6 +128,7 @@
         <div class="wave-3">
             <img src="/images/waves/footer-wave.svg" alt="">
         </div>
+
     </section>
 
     <!-- Footer -->
@@ -144,6 +147,9 @@
     <div id="cart-container"></div>
     <!-- Shopping Cart -->
 
+    <!-- Notification -->
+    <div id="guac-notification-container"></div>
+    <!-- Notification -->
 
 </body>
 </html>
