--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -64,12 +64,13 @@
 
 <!-- Hero Section Start -->
 <section class="hero">
+
+    <video autoplay muted loop id="heroVideo">
+        <source src="videos/video3.mp4" type="video/mp4">
+    </video>
+
     <div class="guac-container">
         <div class="guac-row">
-
-            <div class="guac-col-auto index-cupcake-1 guac-animate guac-slide-left">
-                <!--<img src="images/page-content/index/2men.png" alt="Billede 1"> -->
-            </div>
 
         </div>
     </div>
@@ -116,21 +117,6 @@
             </div>
         </div>
         <!-- Cupcake Showcase End -->
-
-        <!--
-
-            Add carousel showcase. Await animation (2seconds) before starting.
-            Should move left. So start as 3 cupcakes. Showcase the 3 with animations.
-            After the 2 seconds it should apply and move the cupcakes to the left with slow speed.
-
-            It's only a showcase. Meaning users should not be able to click or interact with the carousel.
-
-            If we were to add interactions - positions would be messed up. If a mouse is :hover in the carousel
-            it will stop the carousel in odd positions resulting in odd visuals and possible bugs.
-
-            - Guac
-
-        -->
 
     </div>
 
