--- a/Cupcake/src/main/resources/templates/final-confirmation.html
+++ b/Cupcake/src/main/resources/templates/final-confirmation.html
@@ -125,8 +125,8 @@
     <div id="paymentModalContent">
         <span id="paymentModalClose">&times;</span>
         <h2>Bekræft betaling</h2>
-        <p>Betalingsmetode:<span th:text="${data.paymentMethod}"></span></p>
-        <p>Din balance:0</p>
+        <p>Betalingsmetode: <span th:text="${data.paymentMethod}"></span></p>
+        <p>Din balance: <span th:text="${data.user.balance}"></span> DKK</p>
 
         <!-- Fake. Won't be connected! -->
         <div id="paymentInputs">
