--- a/Cupcake/src/main/resources/templates/admin.html
+++ b/Cupcake/src/main/resources/templates/admin.html
@@ -252,7 +252,7 @@
                         <button type="button" class="guac-btn action-btn" id="searchUserOrdersBtn">Søg ordrer</button>
                         <button type="button" class="guac-btn action-btn" id="hideUserOrdersBtn" style="display:none;">Skjul ordrer</button>
 
-                        <div id="userNextAndPrevNav">
+                        <div id="userNextAndPrevNav" style="display:none;">
                             <button id="prevUserOrderBtn" class="guac-btn action-btn">Forrige ordre</button>
                             <button id="nextUserOrderBtn" class="guac-btn action-btn">Næste ordre</button>
                         </div>
