--- a/Cupcake/src/main/resources/templates/login.html
+++ b/Cupcake/src/main/resources/templates/login.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="forgot-btn-group guac-mt-4">
-                    <a href="/forgot" class="forgot-link">Forgot something?</a>
+                    <a href="/forgot" class="forgot-link">Glemt noget?</a>
                 </div>
 
                 <p th:if="${error}" th:text="${error}" style="color: red;"></p>
